--- a/client/src/style/signin.css
+++ b/client/src/style/signin.css
@@ -60,7 +60,7 @@
     padding-top: 30px;
     padding-bottom: 20px;
     border-radius: 8px;
-    background-color: gray;
+    background-color: rgb(47, 223, 82);
   }
   .Auth-form-content {
     padding-left: 12%;
